apps/production/client-sites/psicmariaqm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psicmariaqm
  namespace: lulo-demo-landings
  labels:
    app: psicmariaqm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psicmariaqm
  template:
    metadata:
      labels:
        app: psicmariaqm
        name: psicmariaqm
    spec:
      containers:
      - name: psicmariaqm
        image: "registry.yesidlopez.de/psicmariaqm:v1.0.22" # {"$imagepolicy": "lulo-demo-landings:psicmariaqm"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
