apps/production/client-sites/psicmariaqm/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: psicmariaqm
  name: psicmariaqm
  namespace: lulo-demo-landings
spec:
  selector:
    app: psicmariaqm
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
